# fast_api_project_generator

./: .gitignore  README.md  config.json  pyproject.toml
src/fast_api_project_generator/: jinja_utils.py  main.py  utils.py
src/fast_api_project_generator/templates/: .env.j2  .gitignore.j2  Dockerfile.j2  README.j2  docker-compose.j2
src/fast_api_project_generator/templates/src/: config.j2  database.j2  main.j2  models.j2  routes.j2  schemas.j2  services.j2
src/fast_api_project_generator/templates/tests/: conftest.j2  model_factory.j2  test_integration.j2
