[tool.poetry]
name = "fast-api-project-generator"
version = "0.1.0"
description = ""
authors = ["Patrick Saint-Denis <patrick@lepanierbleu.ca>"]
readme = "README.md"
packages = [{include = "fast_api_project_generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
typer = "^0.12.5"
toml = "^0.10.2"

[tool.poetry.scripts]
generate-project = "fast_api_project_generator.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
